# text-to-graphql-poc

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  verification_scenarios.md
data/: ai_frontline_customer_info.json  ai_frontline_finance_profile.json  customer-overview-dashboard-schema.md  data-lake-metadata-compact.md  data-lake-metadata-enriched-compact.md  data-lake-metadata-enriched.md  data-lake-metadata.md  ui-mapping.md
notebooks/: End_to_End_Testing.ipynb  Ingestion_Pipeline.ipynb
notebooks/chroma_data/: chroma.sqlite3
src/: config.py  main.py  server.py
src/agents/: answer.py  planner.py  prompts.py  supervisor.py
src/context/: ingest.py  llama_pipeline.py  retriever.py  transforms.py
src/graphql_facade/: data_loader.py  schema.py
src/tools/: context_retrieval.py  customer_resolver.py  graphql_executor.py  validator.py
tests/: test_customer_resolver.py  test_e2e.py  test_graphql_facade.py  test_validator.py
